syntax = "proto3";
package tendermint.spn.profile;

import "gogoproto/gogo.proto";
import "profile/coordinator.proto";
import "profile/validator.proto";

option go_package = "github.com/tendermint/spn/x/profile/types";

message EventCoordinatorCreated {
  uint64 coordinatorID = 1;
  string address       = 2;
}

message EventCoordinatorAddressUpdated {
  uint64 coordinatorID = 1;
  string newAddress    = 2;
}

message EventCoordinatorDisabled {
  uint64 coordinatorID = 1;
  string address       = 2;
}

message EventValidatorCreated {
  string          address           = 1;
  repeated string operatorAddresses = 2;
}

message EventValidatorOperatorAddressesUpdated {
  string          address           = 1;
  repeated string operatorAddresses = 2;
}